--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,6 +13,7 @@
 </head>
 <body>
     <h1>Welcom to the profile of <%= person %></h1>
-    <p>You won't fint a human like me anywhere else</p>
+    <p><strong>Age: </strong><%= datax.age %></p>
+    <p><strong>Job: </strong><%= datax.job %></p>
 </body>
 </html>
