--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,7 +13,13 @@
 </head>
 <body>
     <h1>Welcom to the profile of <%= person %></h1>
-    <p><strong>Age: </strong><%= datax.age %></p>
-    <p><strong>Job: </strong><%= datax.job %></p>
+    <p><strong>Age: </strong><%= data.age %></p>
+    <p><strong>Job: </strong><%= data.job %></p>
+    <h2>Hobbies</h2>
+    <ul>
+        <% data.hobbies.forEach((item)=>{%>
+            <li><%= item %></li>
+        <%})%>
+    </ul>
 </body>
 </html>
