--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,14 +13,7 @@
 </head>
 <body>
     <%-include('partials/nav')%>
-    <h1>Welcom to the profile of <%= person %></h1>
-    <p><strong>Age: </strong><%= data.age %></p>
-    <p><strong>Job: </strong><%= data.job %></p>
-    <h2>Hobbies</h2>
-    <ul>
-        <% data.hobbies.forEach((item)=>{%>
-            <li><%= item %></li>
-        <%})%>
-    </ul>
+    <h1>This is the contact page</h1>
+    <p>Welcome guys</p>
 </body>
 </html>
