--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -15,5 +15,15 @@
     <%-include('partials/nav')%>
     <h1>This is the contact page</h1>
     <p>Welcome guys</p>
+
+    <form action="" id="contact-form">
+        <label for="who">Who do you want to contact</label>
+        <input type="text" name="who" value="<%= qs.person %>">
+        <label for="department">Which department</label>
+        <input type="text" name="department" value="<%= qs.dept %>">
+        <label for="email">Your email</label>
+        <input type="email" name="email" value="<%= qs.email %>">
+        <input type="submit" value="submit">
+    </form>
 </body>
 </html>
