--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,7 +16,7 @@
     <h1>This is the contact page</h1>
     <p>Welcome guys</p>
 
-    <form action="" id="contact-form">
+    <form action="/contact" id="contact-form" method="POST">
         <label for="who">Who do you want to contact</label>
         <input type="text" name="who" value="<%= qs.person %>">
         <label for="department">Which department</label>
