--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -13,17 +13,9 @@
 </head>
 <body>
     <%-include('partials/nav')%>
-    <h1>This is the contact page</h1>
-    <p>Welcome guys</p>
-
-    <form action="/contact2" id="contact-form" method="POST">
-        <label for="who">Who do you want to contact</label>
-        <input type="text" name="who" value="<%= qs.person %>">
-        <label for="department">Which department</label>
-        <input type="text" name="department" value="<%= qs.dept %>">
-        <label for="email">Your email</label>
-        <input type="email" name="email" value="<%= qs.email %>">
-        <input type="submit" value="submit">
-    </form>
+    <h1>CONTACT US!</h1>
+    <p>Thanks for getting in touch</p>
+    <p>You contacted <%=data.who%> in the <%= data.department %></p>
+    
 </body>
 </html>
