--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -15,7 +15,7 @@
     <%-include('partials/nav')%>
     <h1>CONTACT US!</h1>
     <p>Thanks for getting in touch</p>
-    <p>You contacted <%=data.who%> in the <%= data.department %></p>
+    <p>You contacted <%=data.who%> in the <%= data.department %> department.</p>
     
 </body>
 </html>
